Update tox configuration file
Add specific version of pip manager

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = codechecks,unit_tests,integration_tests
 
 [testenv]
 usedevelop = true
+setenv =
+  VIRTUALENV_PIP=22.0.4
 passenv = DOCKER_TEST_TAG GITHUB_ACCESS_TOKEN
 deps =
   -e .[test]
