--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,14 @@ jobs:
     needs: [static-code-analysis, unit-tests]
     env:
       DOCKER_TEST_TAG: test-${{ github.run_id }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - dockerfile: docker/runner.Dockerfile
+            repo: docker.io/${{ github.repository }}
+          - dockerfile: docker/Dockerfile
+            repo: docker.io/${{ github.repository }}-client      
     steps:
     - uses: actions/checkout@v3
 
@@ -78,11 +86,12 @@ jobs:
     - name: Push images to repository with test tags
       uses: docker/build-push-action@v2
       with:
-        file: docker/runner.Dockerfile
+        context: .
+        file: ${{ matrix.dockerfile }}
         push: true
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        tags: docker.io/${{ github.repository }}:${{ env.DOCKER_TEST_TAG }}
+        tags: ${{ matrix.repo }}:${{ env.DOCKER_TEST_TAG }}
 
   integration-tests:
     name: Run integration tests
@@ -152,7 +161,7 @@ jobs:
         include:
           - dockerfile: docker/runner.Dockerfile
             repo: docker.io/${{ github.repository }}
-          - dockerfile: .docker/Dockerfile
+          - dockerfile: docker/Dockerfile
             repo: docker.io/${{ github.repository }}-client
     steps:
     - uses: actions/checkout@v3
